# ZfpCompresser

./: CMakeLists.txt
include/: safebuffer.h  threadCompresser.h  zfpCompresserModule.h
src/: main.cpp  threadCompresser.cpp  zfpCompresserModule.cpp
